--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -1,24 +1,13 @@
 h1 タスクの新規登録
-p てs
 
 .nav.justify-content-end
   = link_to '一覧', tasks_path, class: 'nav-link'
 
-- if @task.errors.present?
-  ul#error_explanation
-    - @task.errors.full_messages.each do |message|
-      li= message
-
-= form_with model: @task, local: true do |f|
+= form_with model: @task, local: true, id: 'new_task_form' do |f|
   .form-group
     = f.label :name
-    = f.text_field :name, class: 'form-control', id: 'task_name'
+    = f.text_field :name, class: 'form-control validate[required]', id: 'task_name'
   .form-group
     = f.label :description
     = f.text_area :description, rows: 5, class: 'form-control', id: 'task_description'
   = f.submit nil, class: 'btn btn-primary'
-
-  javascript:
-    $(document).ready(function() {
-      $("p").text("成功！！");
-    });
