tasks#indexのsystem specを追加 Timezoneをjapanに変更

--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -12,4 +12,4 @@ table.table.table-hover
     - @tasks.each do |task|
       tr
         td= task.name
-        td= task.created_at
+        td= l(task.created_at)
