編集機能追加

--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,6 +1,6 @@
 h1 タスク一覧
 
-= link_to '新規登録', new_task_path, class: 'btn btn-primary'
+= link_to '新規登録', new_task_path, class: 'btn btn-primary', id: 'new'
 
 .mb-3
 table.table.table-hover
@@ -8,8 +8,10 @@ table.table.table-hover
     tr
       th= Task.human_attribute_name(:name)
       th= Task.human_attribute_name(:created_at)
+      th
   tbody
     - @tasks.each do |task|
       tr
         td= link_to task.name, task_path(task)
         td= l(task.created_at)
+        td= link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3', id: 'edit'
