--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -14,4 +14,6 @@ table.table.table-hover
       tr
         td= link_to task.name, task_path(task)
         td= l(task.created_at)
-        td= link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3', id: 'edit'
+        td
+          = link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3', id: 'edit'
+          = link_to '削除', task, method: :delete, data: { confirm: "タスク「#{task.name}」を削除します。よろしいですか？"}, class: 'btn btn-danger'
